# tamra

./: CMakeLists.txt  LICENSE  README.md
includes/core/: AbstractCellData.h  Cell.h  Cell.tpp  CellData.h  CellData.tpp  ChildAndDirectionTables.h  ChildAndDirectionTables.tpp  Oct.h  Oct.tpp  RootCellEntry.h  RootCellEntry.tpp  Tree.h  Tree.tpp
includes/core/iterator/: AbstractTreeIterator.h  AbstractTreeIterator.tpp  HilbertIterator.h  HilbertIterator.tpp  HilbertTables.h  MortonIterator.h  MortonIterator.tpp  MortonTables.h  tree_iterator_types.h
includes/core/manager/: BalanceManager.h  BalanceManager.tpp  CellIdManager.h  CellIdManager.tpp  CoarseManager.h  CoarseManager.tpp  GhostManager.h  GhostManager.tpp  GhostManagerTask.h  GhostManagerTask.tpp  MinLevelMeshManager.h  MinLevelMeshManager.tpp  RefineManager.h  RefineManager.tpp  SnapshotManager.h  SnapshotManager.tpp
includes/linear_algebra/: jacobi.h  jacobi.tpp
includes/parallel/: allgather.h  allgatherv.h  allreduce.h  alltoall.h  alltoallv.h  bcast.h  gather.h  mpitypes.h  wrapper.h
includes/utils/: array_utils.h  display_vector.h  inout_utils.h
src/core/: CellData.cpp
src/linear_algebra/: jacobi.cpp
src/parallel/: allgather.cpp  allgatherv.cpp  allreduce.cpp  alltoall.cpp  alltoallv.cpp  bcast.cpp  gather.cpp  wrapper.cpp
src/utils/: array_utils.cpp
tamra/display/: display_vector.h
tamra/includes/core/: AbstractCellData.h  Cell.h  Cell.tpp  CellData.h  CellData.tpp  ChildAndDirectionTables.h  Oct.h  Oct.tpp  Tree.h  (+5 more)
tests/: CMakeLists.txt  test_main.cpp  test_main_mpi.cpp
tests/all/: main.cpp  tests.h
tests/communications/: main.cpp  mpi_test_communications_alltoall.cpp  mpi_test_communications_bcast.cpp  tests.h
tests/communications/alltoall/: tests.h
tests/communications/bcast/: tests.h
tests/communications/tests/: mpi_test_communications_alltoall.cpp  mpi_test_communications_bcast.cpp
tests/core/: main.cpp  serial_test_core_cell_oct.cpp  serial_test_core_neighbor.cpp  serial_test_core_tree.cpp  serial_test_core_tree_iterator.cpp  test.h
tests/core/cell_oct/: parallel_tests.h  serial_tests.h  test.h
tests/core/manager/: main.cpp  mpi_test_core_manager_balance.cpp  mpi_test_core_manager_ghost.cpp  mpi_test_core_manager_min_level.cpp  mpi_test_core_manager_snapshot.cpp  serial_test_core_manager_cell_id.cpp  serial_test_core_manager_coarse.cpp  serial_test_core_manager_min_level.cpp  serial_test_core_manager_refine.cpp  serial_test_core_manager_snapshot.cpp  test.h
tests/core/manager/balance/: parallel_tests.h  test.h
tests/core/manager/cell_id/: parallel_tests.h  serial_tests.h  test.h
tests/core/manager/coarse/: parallel_tests.h  serial_tests.h  test.h
tests/core/manager/ghost/: parallel_tests.h  test.h
tests/core/manager/min_level/: parallel_tests.h  serial_tests.h  test.h
tests/core/manager/refine/: parallel_tests.h  serial_tests.h  test.h
tests/core/neighbor/: serial_tests.h  test.h
tests/core/tests/: serial_test_core_cell_oct.cpp  serial_test_core_neighbor.cpp  serial_test_core_tree.cpp  serial_test_core_tree_iterator.cpp
tests/core/tests/manager/: mpi_test_core_manager_balance.cpp  mpi_test_core_manager_ghost.cpp  mpi_test_core_manager_min_level.cpp  serial_test_core_manager_cell_id.cpp  serial_test_core_manager_coarse.cpp  serial_test_core_manager_min_level.cpp  serial_test_core_manager_refine.cpp
tests/core/tree/: parallel_tests.h  serial_tests.h  test.h
tests/core/tree_iterator/: parallel_tests.h  serial_tests.h  test.h
tests/linear_algebra/: main.cpp  mpi_test_jacobi.cpp  parallel_tests.h  serial_test_jacobi.cpp  serial_tests.h  tests.h
tests/linear_algebra/jacobi/: parallel_tests.h  serial_tests.h  test.h
tests/linear_algebra/tests/: mpi_test_jacobi.cpp  serial_test_jacobi.cpp
tests/utils/includes/: UnitTestRegistry.h  test_macros.h
tests/utils/src/: UnitTest.cpp  UnitTestRegistry.cpp
(+49 files in other folders)
